--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,4 @@
-# https://github.com/thombergs/code-examples/blob/master/spring-boot/spring-boot-health-check/src/main/resources/application.properties
-# Show details of health endpoint
-#management.endpoint.health.show-details=always
-
-# Use "*" to expose all endpoints, or a comma-separated list to expose selected ones
-# https://howtodoinjava.com/spring-boot/actuator-endpoints-example/
-management.endpoints.web.exposure.include=health,info 
-#management.endpoints.web.exposure.exclude=
-
-# Use "*" to expose all endpoints, or a comma-separated list to expose selected ones
-#management.endpoints.jmx.exposure.include=*
-#management.endpoints.jmx.exposure.exclude=
-#management.endpoints.web.exposure.include=health,info,prometheus
-#management.health.probes.enabled=true
+management.server.port=8080
+management.endpoints.web.exposure.include=health,info
+management.endpoints.web.base-path=/
+management.endpoints.web.path-mapping.health=status
